--- a/templates/components/_header.html
+++ b/templates/components/_header.html
@@ -141,7 +141,7 @@
     <div class="header-top">
         <div class="header-logo">
             <!-- Logo Golden Sat -->
-            <img src="{% static 'logo-golden.png' %}" alt="Logo Golden Sat">
+            <img src="{% static 'logo.png' %}" alt="Logo Golden Sat">
             <span class="header-title">GS SISTEMA INT</span>
         </div>
     </div>
